--- a/autoscaling_vars.yml
+++ b/autoscaling_vars.yml
@@ -1,7 +1,7 @@
 ---
-region: "Desired region"                                             #Eg: ap-south-1
-access_key: "your access key"
-secret_key: "your secret key"      
-key_name: "Keyname"                                                  #Copy this key pem file to this directory
+region: "us-east-1"                                             #Eg: ap-south-1
+#access_key: "your access key"
+#secret_key: "your secret key"      
+key_name: "aws"                                                  #Copy this key pem file to this directory
 health_time: 25                                
-git_url: "Git website/Application URL"
+git_url: "https://github.com/bibin567/project.git"
