--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -2,7 +2,7 @@ name: Main
 on: push
 
 env:
-  AWS_REGION: ap-south-1
+  AWS_REGION: us-east-1
 
 jobs:
   packer:
@@ -17,22 +17,22 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Initialize Packer Template
-        uses: hashicorp/packer-github-actions@v1.0.0
+        uses: hashicorp/packer-github-actions@v0.1.0
         with:
           command: init
 
       - name: Validate Template
-        uses: hashicorp/packer-github-actions@v1.0.0
+        uses: hashicorp/packer-github-actions@v0.1.0
         with:
           command: validate
           arguments: -syntax-only
           target: GitWebsite.pkr.hcl
 
       - name: Build Artifact
-        uses: hashicorp/packer-github-actions@v1.0.0
+        uses: hashicorp/packer-github-actions@v0.1.0
         with:
           command: build
           arguments: "-color=false -on-error=abort"
