--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -20,19 +20,19 @@ jobs:
           aws-region: us-east-1
 
       - name: Initialize Packer Template
-        uses: hashicorp/packer-github-actions@v0.1.0
+        uses: hashicorp/packer-github-actions@master
         with:
           command: init
 
       - name: Validate Template
-        uses: hashicorp/packer-github-actions@v0.1.0
+        uses: hashicorp/packer-github-actions@master
         with:
           command: validate
           arguments: -syntax-only
           target: GitWebsite.pkr.hcl
 
       - name: Build Artifact
-        uses: hashicorp/packer-github-actions@v0.1.0
+        uses: hashicorp/packer-github-actions@master
         with:
           command: build
           arguments: "-color=false -on-error=abort"
@@ -58,7 +58,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Terraform Init
         id: init
