--- a/playbook_ansible_autoscaling.yml
+++ b/playbook_ansible_autoscaling.yml
@@ -1,5 +1,5 @@
 ---
-- name: "Continous Deployment - Ansible for offloading and adding instances to load balancer" 
+- name: "Continous Deployment - Ansible for offloading and adding instances to load balancer"
   hosts: localhost
   vars_files:
     - autoscaling_vars.yml 
@@ -15,20 +15,18 @@
           instance-state-name: [ "running"] 
       register: asg_instance 
 
-    
-    - name: "Creating Dynamic Inventory for  ASG Instances"
+    - name: "Creating Dynamic Inventory for ASG Instances"
       add_host:
         name: "{{ item.public_ip_address }}"
         groups: "asg"
         ansible_host: "{{ item.public_ip_address }}"
         ansible_port: 22
         ansible_user: "ec2-user"
-        ansible_ssh_private_key_file: "./aws.ppk" 
+        ansible_ssh_private_key_file: "{{ lookup('env', 'ANSIBLE_SSH_PRIVATE_KEY') }}"   # Using the GitHub secret as environment variable
         ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
       with_items:
         - "{{ asg_instance.instances }}"
 
-       
 - name: "CD - Offloading and adding EC2"
   hosts: asg 
   become: true 
@@ -51,7 +49,7 @@
         state: touch 
         mode: 0000
 
-    - name: "EC2 - Off loading from Load Balancer" 
+    - name: "EC2 - Offloading from Load Balancer" 
       when: git_status.changed == true
       pause:
         seconds: "{{ health_time }}"   
@@ -80,4 +78,4 @@
     - name: "EC2 - Application Updation - Loading EC2 To ELB"
       when: git_status.changed == true
       pause:
-        seconds: "{{ health_time }}" 
+        seconds: "{{ health_time }}"
