--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -21,7 +21,12 @@ jobs:
 
       - name: Set Key Pair Environment Variable    
         run: echo "KEY_NAME=${{ secrets.AWS_KEY_NAME }}" >> $GITHUB_ENV  # Make sure to add AWS_KEY_NAME secret
-        
+
+      - name: Set up SSH private key for Packer
+        run: |
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
       - name: Initialize Packer Template
         uses: hashicorp/packer-github-actions@master
         with:
@@ -42,6 +47,7 @@ jobs:
           target: GitWebsite.pkr.hcl
         env:
           PACKER_LOG: 1
+          ssh_private_key_file: "~/.ssh/id_rsa"  # Pass the private key path as an environment variable
 
   terraform:
     runs-on: ubuntu-latest
@@ -120,7 +126,7 @@ jobs:
           sudo apt update
           sudo apt install -y ansible
 
-      - name: Set up SSH private key
+      - name: Set up SSH private key for Ansible
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa  # Ensures only the owner can read/write the file
