--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -47,7 +47,7 @@ jobs:
           target: GitWebsite.pkr.hcl
         env:
           PACKER_LOG: 1
-          ssh_private_key_file: "~/.ssh/id_rsa"  # Pass the private key path as an environment variable
+          ssh_private_key_file: "~/.ssh/id_rsa"  # Pass the private key path as an environment variablee
 
   terraform:
     runs-on: ubuntu-latest
