--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -98,10 +98,10 @@ jobs:
       - name: Set up SSH private key for Ansible
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan -H github.com >> ~/.ssh/known_hosts
 
       - name: Run Ansible playbook
         run: |
-          ansible-playbook -i ${{ secrets.ANSIBLE_INVENTORY }} --private-key ~/.ssh/id_rsa playbook_ansible_autoscaling.yml
+          ansible-playbook -i ${{ secrets.ANSIBLE_INVENTORY }} --private-key ~/.ssh/id_ed25519 playbook_ansible_autoscaling.yml
