--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -34,20 +34,17 @@ jobs:
         uses: hashicorp/packer-github-actions@master
         with:
           command: build
-          arguments: "-var 'ssh_private_key_file=/github/home/.ssh/id_rsa' -color=false -on-error=abort"
+          arguments: "-var 'ssh_private_key_file=${{ secrets.SSH_PRIVATE_KEY_PATH }}'"
           target: GitWebsite.pkr.hcl
         env:
             PACKER_LOG: 1
-  
-
-
-
+          
   terraform:
     runs-on: ubuntu-latest
     needs:
       - packer
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Setup Terraform
@@ -90,6 +87,9 @@ jobs:
     needs:
       - terraform
     steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
       - name: Set up Ansible
         run: |
           sudo apt update
